Résolution bug écran non clear sur linux